CommentsApi squeleton code
