# api/comments/src/openapi_server/models/comment_list_response.py
@@ -5,7 +5,7 @@
 
     API for the Comments microservice of laWiki web appplication. It provides all endpoints related to CRUD operatios for articles comments.
 
-    The version of the OpenAPI document: 0.1
+    The version of the OpenAPI document: 1.0
     Generated by OpenAPI Generator (https://openapi-generator.tech)
 
     Do not edit the class manually.
@@ -37,8 +37,8 @@ class CommentListResponse(BaseModel):
     limit: Annotated[int, Field(le=100, strict=True, ge=0)] = Field(description="The maximum of responses to be returned")
     offset: Annotated[int, Field(strict=True, ge=0)] = Field(description="The index of the first result to return. Use with limit to get the next page of search results.")
     total: Annotated[int, Field(strict=True, ge=0)] = Field(description="The total number of results of the query")
-    next: Optional[StrictStr] = Field(default=None, description="The url to request the next batch of results")
-    previous: Optional[StrictStr] = Field(default=None, description="The url to request the previous batch of results")
+    next: Optional[StrictStr] = Field(description="The url to request the next batch of results")
+    previous: Optional[StrictStr] = Field(description="The url to request the previous batch of results")
     __properties: ClassVar[List[str]] = ["comments", "limit", "offset", "total", "next", "previous"]
 
     model_config = {
@@ -85,6 +85,16 @@ class CommentListResponse(BaseModel):
                 if _item:
                     _items.append(_item.to_dict())
             _dict['comments'] = _items
+        # set to None if next (nullable) is None
+        # and model_fields_set contains the field
+        if self.next is None and "next" in self.model_fields_set:
+            _dict['next'] = None
+
+        # set to None if previous (nullable) is None
+        # and model_fields_set contains the field
+        if self.previous is None and "previous" in self.model_fields_set:
+            _dict['previous'] = None
+
         return _dict
 
     @classmethod
